# VoxelEngine

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/engine/: MultiDimArray.cpp  MultiDimArray.h
src/objects/: Camera.cpp  Camera.h
src/shaders/: default_fragment.glsl  default_vertex.glsl  yellow_fragment.glsl
src/utilities/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  TimeUtility.cpp  TimeUtility.h
src/world/: Chunk.cpp  Chunk.h
